--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.12</version>
         </dependency>
 
         <dependency>
