--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,9 @@ spring:
     generate-ddl: true
     properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
   datasource:
-    url: jdbc:mysql://localhost:3306/movies?useSSL=false
-    username: root
+    url: jdbc:mysql://localhost:3306/movies?useSSL=false&serverTimezone=UTC
+    username: moviefun
+    password: pass123
 
   mvc.view:
     prefix: /WEB-INF/
